--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src='//scdn.line-apps.com/n/line_it/thirdparty/loader.min.js' async='async' defer='defer' ></script>
   </body>
 </html>
