--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v18.0" nonce=""></script>
 </body>
 
 </html>
